--- a/jQuery EasyUI/DataGrid.html
+++ b/jQuery EasyUI/DataGrid.html
@@ -23,9 +23,9 @@
     </thead>
 </table>
 <div id="toolbar">
-    <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="newUser()">New User</a>
-    <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editUser()">Edit User</a>
-    <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="destroyUser()">Remove User</a>
+    <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="newUser();">New User</a>
+    <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editUser();">Edit User</a>
+    <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="destroyUser();">Remove User</a>
 </div>
 <!-- 模态框 -->
 <div id="dlg" class="easyui-dialog" style="width:400px;height:280px;padding:10px 20px"
