--- a/jQuery EasyUI/DataGrid.html
+++ b/jQuery EasyUI/DataGrid.html
@@ -9,8 +9,8 @@
     <script src="resource/jquery.easyui.min.js" type="text/javascript"></script>
     <script src="resource/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
 </head>
-<body>
-<table id="dg" title="用户列表" class="easyui-datagrid" style="width:550px;height:250px"
+<body style="margin: 0">
+<table id="dg" title="用户列表" class="easyui-datagrid" style="min-width:600px;height:250px"
        url="get_users.php"
        toolbar="#toolbar" pagination="true"
        rownumbers="true" fitColumns="true" singleSelect="true">
