--- a/jQuery EasyUI/DataGrid.html
+++ b/jQuery EasyUI/DataGrid.html
@@ -10,94 +10,38 @@
     <script src="resource/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
 </head>
 <body style="margin: 0">
-<table id="dg" title="用户列表" class="easyui-datagrid" style="min-width:600px;height:250px"
-       url="get_users.php"
-       toolbar="#toolbar" pagination="true"
-       rownumbers="true" fitColumns="true" singleSelect="true">
-    <thead>
-    <tr>
-        <th field="name" width="50">姓名</th>
-        <th field="phone" width="50">电话</th>
-        <th field="email" width="50">邮箱</th>
-    </tr>
-    </thead>
-</table>
+<div id="dg" style="min-width:600px;height:250px"></div>
 <div id="toolbar">
     <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="newUser();">添加用户</a>
     <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editUser();">编辑用户</a>
     <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="destroyUser();">删除用户</a>
 </div>
-<!-- 模态框 -->
-<div id="dlg" class="easyui-dialog" style="width:400px;height:280px;padding:10px 20px"
-     closed="true" buttons="#dlg-buttons">
-    <div class="ftitle">User Information</div>
-    <form id="fm" method="post">
-        <div class="fitem">
-            <label for="name">姓名:</label><input id="name" name="name" class="easyui-validatebox" required="true">
-        </div>
-        <div class="fitem">
-            <label for="phone">电话:</label><input id="phone" name="phone" validType="">
-        </div>
-        <div class="fitem">
-            <label for="email">邮箱:</label><input id="email" name="email" class="easyui-validatebox" validType="email">
-        </div>
-    </form>
-</div>
-<div id="dlg-buttons">
-    <a href="#" class="easyui-linkbutton" iconCls="icon-ok" onclick="saveUser()">Save</a>
-    <a href="#" class="easyui-linkbutton" iconCls="icon-cancel" onclick="$('#dlg').dialog('close')">Cancel</a>
-</div>
 </body>
 </html>
 <script type="text/javascript">
-    function newUser(){
-        $('#dlg').dialog('open').dialog('setTitle','New User');
-        $('#fm').form('clear');
-        url = 'save_user.php';
-    }
-    var row = $('#dg').datagrid('getSelected');
-    if (row){
-        $('#dlg').dialog('open').dialog('setTitle','Edit User');
-        $('#fm').form('load',row);
-        url = 'update_user.php?id='+row.id;
-    }
-    function saveUser(){
-        $('#fm').form('submit',{
-            url: url,
-            onSubmit: function(){
-                return $(this).form('validate');
+    $(document).ready(getData);
+
+    function getData() {
+        $('#dg').datagrid({
+            title: '用户列表...',
+            url: "api/authority/emp/queryEmpInfo.json",
+            columns: [
+                [
+                    {field: 'name', title: '姓名', width: 200}
+                ]
+            ],
+            queryParams: {
+                name:'张三儿'
             },
-            success: function(result){
-                var result = eval('('+result+')');
-                if (result.errorMsg){
-                    $.messager.show({
-                        title: 'Error',
-                        msg: result.errorMsg
-                    });
-                } else {
-                    $('#dlg').dialog('close');        // close the dialog
-                    $('#dg').datagrid('reload');    // reload the user data
-                }
-            }
+            // easyui解析server返回的json数据时，json数据必须遵循如下格式：
+            /**
+             * {"rows":[{"name":"单车上的理想"}],"total":1}
+             */
+            toolbar: '#toolbar',
+            pagination: true,
+            pageSize: 1,        //每页显示的记录条数，默认为10
+            pageNumber: 1,
+            pageList: [1, 2, 3]  //可以设置每页记录条数的列表
         });
-    }
-    function destroyUser(){
-        var row = $('#dg').datagrid('getSelected');
-        if (row){
-            $.messager.confirm('Confirm','Are you sure you want to destroy this user?',function(r){
-                if (r){
-                    $.post('destroy_user.php',{id:row.id},function(result){
-                        if (result.success){
-                            $('#dg').datagrid('reload');    // reload the user data
-                        } else {
-                            $.messager.show({    // show error message
-                                title: 'Error',
-                                msg: result.errorMsg
-                            });
-                        }
-                    },'json');
-                }
-            });
-        }
     }
 </script>
