--- a/jQuery EasyUI/DataGrid.html
+++ b/jQuery EasyUI/DataGrid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>DataGrid</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="resource/themes/bootstrap/easyui.css" rel="stylesheet">
     <link href="resource/themes/icon.css" rel="stylesheet">
