--- a/jQuery EasyUI Extensions/Form.html
+++ b/jQuery EasyUI Extensions/Form.html
@@ -11,7 +11,7 @@
     <script src="resource/release/jquery.jdirk.min.js" type="text/javascript"></script>
     <link href="resource/icons/icon-all.min.css" rel="stylesheet">
     <script src="resource/release/jeasyui.icons.all.min.js" type="text/javascript"></script>
-    <link href="resource/jeasyui-extensions/jeasyui.extensions.css" rel="stylesheet"/>
+    <link href="resource/release/jeasyui.extensions.min.css" rel="stylesheet"/>
     <script src="resource/release/jeasyui.extensions.all.min.js" type="text/javascript"></script>
     <!--<script src="resource/jeasyui-extensions/jeasyui.extensions.validatebox.js" type="text/javascript"></script>-->
     <style>
