--- a/MyPage/Form表单.html
+++ b/MyPage/Form表单.html
@@ -33,7 +33,7 @@
 <body>
 <fieldset style="width: 97.76%;min-width: 500px">
     <legend>租户信息表单</legend>
-    <form id="tenantFm" class="easyui-form warp">
+    <form id="tenantFm" class="warp">
         <div>
             <label for="code">租户编码:</label><input id="code" name="code" type="text"/>
             <label for="name">租户全称:</label><input id="name" name="name" type="text"/>
