--- a/jQuery EasyUI Extensions/Form.html
+++ b/jQuery EasyUI Extensions/Form.html
@@ -13,41 +13,81 @@
     <script src="resource/release/jeasyui.icons.all.min.js" type="text/javascript"></script>
     <link href="resource/release/jeasyui.extensions.min.css" rel="stylesheet"/>
     <script src="resource/release/jeasyui.extensions.all.min.js" type="text/javascript"></script>
-    <!--<script src="resource/jeasyui-extensions/jeasyui.extensions.validatebox.js" type="text/javascript"></script>-->
     <style>
-        fieldset input {
+        fieldset {
             border: 1px solid green;
             -webkit-border-radius: 5px;
+        }
+        label {
+            width: 110px;
+            height: 20px;
+            display:inline-block;
+            text-align: right;
+            padding-right: 10px;
+            font-weight: lighter;
+        }
+        input,textarea {
+            border: 1px solid #cccccc;
+            border-radius: 4px 4px 4px 4px;
+            -moz-border-radius: 4px 4px 4px 4px;
+            -webkit-border-radius: 4px 4px 4px 4px;
+            width: 275px;
+            height: 23px;
+            padding-left: 3px;
+        }
+        .warp div {
+            margin-bottom: 8px;
         }
     </style>
 </head>
 <body style="font-size: 13px;">
-<input id="Button1" type="button" value="获取该表单的数据" />
-<input id="validatebox" name="validatebox" class="easyui-validatebox"
-       data-options="required:true, autoFocus:true, validType:'shortDate', prompt:'输入ipV4地址...'"/>
-<div>
-    <fieldset style="width: 98%;min-width: 500px">
-        <legend>请填写表单</legend>
-        <form id="form1" class="easyui-form">
-            <label for="Text1">姓名：</label><input id="Text1" name="Text1" type="text" />
-            <label for="Text2">年龄：</label><input id="Text2" name="Text2" type="text" class="easyui-numberbox" data-options="prompt: '请输入年龄'" /><hr />
-            学历：
-            <input id="Radio1" name="Radio" type="radio" value="1" /><label for="Radio1">高中及以下</label>
-            <input id="Radio2" name="Radio" type="radio" value="2" /><label for="Radio2">本科</label>
-            <input id="Radio3" name="Radio" type="radio" value="3" /><label for="Radio3">硕士</label><hr />
-            兴趣爱好：<input id="CheckBox1" name="CheckBox1" type="checkbox" /><label for="CheckBox1">唱歌跳舞</label>
-            <input id="CheckBox2" name="CheckBox2" type="checkbox" /><label for="CheckBox2">上网聊天</label>
-            <input id="CheckBox3" name="CheckBox3" type="checkbox" /><label for="CheckBox3">看书挺音乐</label><hr />
-            <select id="select1" name="select1" class="easyui-combobox" data-options="width: 200">
-                <option value="1" selected="selected">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-            </select>
-            <hr />
-            <label for="TextArea1">备注信息：</label><textarea id="TextArea1" name="TextArea1" cols="20" rows="2"></textarea>
+<div style="padding-top: 10px">
+    <fieldset style="width: 97.76%;min-width: 500px">
+        <legend>租户信息表单</legend>
+        <form id="validateForm" class="easyui-form warp">
+            <div>
+                <label for="code">租户编码:</label><input id="code" name="code" type="text"/>
+                <label for="name">租户全称:</label><input id="name" name="name" type="text" data-options="required:true"/>
+            </div>
+            <div>
+                <label for="shortName">租户简称:</label><input id="shortName" name="shortName" type="text"/>
+                <label for="areaPath">所属地区:</label><input id="areaPath" name="areaPath" type="text"/>
+            </div>
+            <div><label for="address">详细地址:</label><input id="address" name="address" type="text" class="easyui-input" style="width: 682px"/></div>
+            <div><label for="linker">联系人:</label><input id="linker" name="linker" class="easyui-validatebox" data-options="required:true"/>
+                <label for="telphone">固定电话:</label><input id="telphone" name="telphone" class="easyui-validatebox" data-options="validType:'tel'"/>
+            </div>
+            <div><label for="mobile">移动电话:</label><input id="mobile" name="mobile" class="easyui-validatebox" data-options="required:true,validType:'telOrMobile'"/>
+                <label for="email">电子信箱:</label><input id="email" name="email" class="easyui-validatebox" data-options="validType:'email'"/>
+            </div>
+            <div><label for="fax">传真号码:</label><input id="fax" name="fax" class="easyui-validatebox" data-options="validType:'fax'"/>
+                <label for="status">状态:</label><input id="status" name="status" type="number"/>
+            </div>
+            <div style="position:relative;padding-left:130px;">
+                <label for="description" style="position: absolute;left: 0;bottom: 50%;height: 20px;margin-bottom: -10px;">备注说明:</label>
+                <textarea id="description" name="description" style="width: 680px;height: 100px;margin-left: -10px"></textarea>
+            </div>
+            <div style="text-align: center;">
+                <a href="#" id="btnSave" class="easyui-linkbutton" data-options="iconCls:'icon-save'">保 存</a>&nbsp;
+                <a href="#" id="btnCancel" class="easyui-linkbutton" data-options="iconCls:'icon-cancel'">取 消</a>
+            </div>
         </form>
     </fieldset>
 </div>
 </body>
 </html>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#btnSave').bind('click', function() {
+            $('#validateForm').form('submit', {
+                url:"/api/test/save.json",
+                onSubmit: function() {
+                    return $(this).form('validate');
+                },
+                success: function() {
+
+                }
+            });
+        });
+    });
+</script>
