--- a/jQuery EasyUI Extensions/TreeGrid.html
+++ b/jQuery EasyUI Extensions/TreeGrid.html
@@ -15,12 +15,17 @@
     <script src="resource/release/jeasyui.extensions.all.min.js" type="text/javascript"></script>
 </head>
 <body>
-<table id="treeGrid"></table>
+<div id="tb">
+    <a href="#" id="addBtn" class="easyui-linkbutton" data-options="iconCls:'icon-add',plain:true">添加</a>
+</div>
+<table id="treeGrid" toolbar="#tb"></table>
 </body>
 </html>
 <script type="text/javascript">
+    var treeGridData;
     $(document).ready(function() {
-        var t = $("#treeGrid").treegrid({
+        var treeGrid = $("#treeGrid");
+        treeGridData = treeGrid .treegrid({
             title: 'This is TreeGrid',
             width: 900,
             height: 400,
@@ -35,12 +40,12 @@
                 { field: 'id', title: 'ID(id)', width: 80, sortable: true }
             ]],
             columns: [[
-                { field: 'name', title: '名称(name)', width: 180, sortable: true },
-                { field: 'age', title: '年龄(age)', width: 120, sortable: true },
-                { field: 'weight', title: '体重(weight)', width: 120, sortable: true },
-                { field: 'size', title: 'Size(size)', width: 140 },
-                { field: 'date', title: '日期(date)', width: 140, sortable: true },
-                { field: 'undefined', title: '测试(不存在的字段)', width: 140 }
+                { field: 'name', title: '名称(name)', width: 180, editor: 'text', sortable: true },
+                { field: 'age', title: '年龄(age)', width: 120, editor: 'text', sortable: true },
+                { field: 'weight', title: '体重(weight)', width: 120, editor: 'text', sortable: true },
+                { field: 'size', title: 'Size(size)', width: 140, editor: 'text' },
+                { field: 'date', title: '日期(date)', width: 140, editor: 'text', sortable: true },
+                { field: 'undefined', title: '测试(不存在的字段)', width: 140, editor: 'text' }
             ]],
             enableHeaderClickMenu: false,
             enableHeaderContextMenu: false,
@@ -48,7 +53,10 @@
             moveMenu: { submenu: false, upLevel: true, up: true, down: true, downLevel: true },    //开始行右键菜单的移动列功能，此属性可丰富配置，详情见 API 文档
             selectOnRowContextMenu: true,       //此属性开启当右键点击行时自动选择该行的功能
             toggleOnClick: true,
-
+            autoFocusField: "name",
+            autoEditing: true,          //该属性启用双击行时自定开启该行的编辑状态
+            extEditing: true,           //该属性启用行编辑状态的 ExtEditing 风格效果，该属性默认为 true。
+            singleEditing: true,        //该属性启用datagrid的只允许单行编辑效果，该属性默认为 true。
             //通过拖动数据行以及右键菜单移动行数据时，都会触发 onDrop 事件。
             onDrop: function (target, source, point) {
                 $.messager.show($.string.format("您刚才将节点 {0} 移向了节点 {1} 的 {2} 位置", source.name, target.name, point));
@@ -64,5 +72,21 @@
             rownumbers: true
         });
 
+        // 行编辑一定要以这种方式来做...
+        treeGrid.treegrid({
+            onAfterEdit: function (data) {
+                $.fn.treegrid.extensions.onAfterEdit.apply(this, arguments);  //这句一定要加上。
+                alert(data.name);
+            }
+        });
+
+        $("#addBtn").bind("click", function () {
+            $('#treeGrid').treegrid('insert', {
+                before: 'a3',
+                data: {
+                    name: 'name38'
+                }
+            });
+        });
     });
 </script>
