--- a/Cloud Zoom/cloudzoom.html
+++ b/Cloud Zoom/cloudzoom.html
@@ -8,7 +8,7 @@
     <script src="resource/js/cloudzoom.js" type="text/javascript"></script>
 </head>
 <body>
-<img class="cloudzoom" src="resource/img/small/image1.jpg"
+<img id="imgPreview" class="cloudzoom" src="resource/img/small/image1.jpg"
      data-cloudzoom="zoomImage: 'resource/img/large/image1.jpg', zoomPosition: 4, zoomMatchSize: true"/>
 <hr>
 <a href="http://www.starplugins.com/cloudzoom/quickstart">详细API请参考地址</a>
@@ -16,4 +16,8 @@
 </html>
 <script type="text/javascript">
     CloudZoom.quickStart();
+
+    // 也可以这样
+//    var myInstance = $('#imgPreview').data('CloudZoom');
+//    myInstance.loadImage(newImgSrc, newImgSrc);
 </script>
