--- a/Cloud Zoom/cloudzoom.html
+++ b/Cloud Zoom/cloudzoom.html
@@ -4,8 +4,8 @@
     <title>Cloud Zoom示例</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="resource/js/jquery-1.10.2-min.js" type="text/javascript"></script>
-    <link href="resource/css/cloudzoom.css" rel="stylesheet" type="text/css">
-    <script src="resource/js/cloudzoom.js" type="text/javascript"></script>
+    <link href="resource/css/cloudzoom-min.css" rel="stylesheet" type="text/css">
+    <script src="resource/js/cloudzoom-min.js" type="text/javascript"></script>
 </head>
 <body>
 <img id="imgPreview" class="cloudzoom" src="resource/img/small/image1.jpg"
