--- a/ExtJS/helloworld.html
+++ b/ExtJS/helloworld.html
@@ -11,6 +11,6 @@
 </html>
 <script type="text/javascript">
     Ext.onReady(function () {
-        Ext.MessageBox.alert("标题", "内容...")
+        Ext.MessageBox.alert("标题", "成功搭建ExtJS5环境")
     });
 </script>
