--- a/ExtJS/index.html
+++ b/ExtJS/index.html
@@ -14,95 +14,66 @@
 <script type="text/javascript">
     Ext.onReady(mainFrame);
 
-    function mainFrame() {
-        //新建tabpanel
-        var tab = Ext.create('Ext.TabPanel', {
-            region: 'center',
-            deferredRender: false,
-            activeTab: 0,
-            resizeTabs: true, // turn on tab resizing
-            minTabWidth: 115,
-            tabWidth: 135,
-            enableTabScroll: true
-        });
+    var header = Ext.create('Ext.panel.Panel', {
+        height: 80,
+        html: 'Ext学习示例',
+        region: 'north',
+        split: true,
+        bbar: [{
+            iconCls: 'icon-user',
+            text: '管理员',
+            style: 'margin-left:10px'
+        }, '-', {
+            text: Ext.Date.format(new Date(), 'Y年m月d日 H:i:s')
+        }, '->', {
+            iconCls: 'icon-logout',
+            text: '退出'
+        }],
+        bodyStyle: 'background-color:#99bbe8;line-height:50px;text-align:center;font-size:24px;color:#000000;font-family:黑体;font-weight:bolder'
+    });
 
-        var viewPort = Ext.create('Ext.Viewport', {
+    var menuTree = Ext.create('Ext.panel.Panel', {
+        region: 'west',
+        title: '系统菜单',
+        width: 250,
+        iconCls: 'icon-tree',
+        autoScroll: false,
+        layout: 'accordion',
+        collapsible: true,
+        layoutConfig: {
+            animate: true
+        },
+        split: true
+    });
+
+    var tabPanel = Ext.create('Ext.tab.Panel', {
+        activeTab: 0,
+        enableTabScroll: true,
+        animScroll: true,
+        border: true,
+        autoScroll: true,
+        region: 'center',
+        split: true,
+        items: [{
+            iconCls: 'icon-activity',
+            title: '平台首页',
+            //xtype:'first',
+            layout: 'column'
+        }]
+    });
+
+    var bottom = Ext.create('Ext.panel.Panel', {
+        height: 20,
+        html: Ext.Date.format(new Date(), 'Y-m-d H:i:s'),
+        region: 'south',
+        bodyStyle: 'background-color:#99bbe8;line-height:20px;text-align:center;font-size:14px;color:#000000;font-famiy:宋体;font-weight:sharp'
+    });
+
+    function mainFrame() {
+        Ext.create('Ext.container.Viewport', {
             layout: 'border',
-            items: [{
-                region: 'north',
-                xtype: 'panel',
-                minHeight: 60,
-                html: 'north',
-                collapsible: true  // 设置可折叠
-            }, {
-                title: 'West Region is collapsible',
-                region: 'west',
-                xtype: 'panel',
-                width: 200,
-                collapsible: true,  // 设置可折叠
-                id: 'west-region-container',
-                layout: 'fit',
-                margins: '0 0 0 0',
-                layout: 'accordion',
-                title: '菜单',
-                split: true,
-                collapsible : true,
-                layoutConfig : {
-                    animate : true
-                },
-                items: [{
-                    title: '业务信息处理',
-                    xtype : 'treepanel',
-                    expanded : true,
-                    animate : true,
-                    enableDD : false,
-                    border : false,
-                    containerScroll : true,
-                    root : {
-                        text : '根节点',
-                        id:'root',
-                        children : [{
-                            text : '业务信息',
-                            id : 'http://www.qq.com',
-                            leaf : true
-                        }, {
-                            text : '组织管理',
-                            leaf : true,
-                            id :'http://www.baidu.com'
-                        }]
-                    },
-                    listeners: {
-                        //添加节点点击事件
-                        itemclick: function(dataview, node, item, index, e, eOpts) {
-                            if (!node.isLeaf()) return;
-                            var n = tab.getComponent(node.id);
-                            if (!n) { // 判断是否已经打开该面板
-                                n = tab.add({
-                                    id : node.id,
-                                    title : node.data.text,
-                                    closable: true,
-                                    icon : 'http://nuomi.xnimg.cn/upload/deal/2014/7/V_L/1342095-sssythtgk8-16746722433842092.jpg',
-                                    html: '<iframe scrolling="auto" frameborder="0" width="100%" height="100%" src="' + node.id + '"></iframe>'  // 通过html载入目标页
-                                });
-                            }
-                            tab.setActiveTab(n);
-                        }
-                    }
-                }, {
-                    title : '信息中心',
-                    border : false,
-                    html : '<div id="tree2" style="overflow:auto;width:100%;height:100%"></div>'
-                }, {
-                    title : '系统设置',
-                    border : false,
-                    html : '<div id="tree3" style="overflow:auto;width:100%;height:100%"></div>'
-                }]
-            }, tab, {
-                region : 'south',
-                minHeight : 25,
-                html:"<div align='center'>版权所有 xxxx有限公司 © 信息服务中心</div>"
-            }]
-        })
+            items: [header, menuTree, tabPanel, bottom]
+        });
     }
 
 </script>
