--- a/ExtJS/index.html
+++ b/ExtJS/index.html
@@ -58,7 +58,11 @@
             iconCls: 'icon-activity',
             title: '平台首页',
             //xtype:'first',
-            layout: 'column'
+            layout: 'column',
+            loader: {
+                url: 'test.html',
+                autoLoad: true
+            }
         }]
     });
 
