--- a/ExtJS/index.html
+++ b/ExtJS/index.html
@@ -34,9 +34,9 @@
 
     var menuTree = Ext.create('Ext.panel.Panel', {
         region: 'west',
-        title: '系统菜单',
+        title: 'Accordion布局动态菜单',
         width: 250,
-        iconCls: 'icon-tree',
+        iconCls: 'icon-accordion',
         autoScroll: false,
         layout: 'accordion',
         collapsible: true,
