--- a/jQWidgets/jqxGrid.html
+++ b/jQWidgets/jqxGrid.html
@@ -3,8 +3,7 @@
 <head>
     <title>jqxGrid</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="resource/styles/jqx.base.css" type="text/css" />
-    <link rel="stylesheet" href="resource/styles/jqx.metro.css" type="text/css" />
+    <link rel="stylesheet" href="resource/styles/jqx.bootstrap.css" type="text/css" />
     <script type="text/javascript" src="resource/scripts/jquery-1.10.2-min.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxcore.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxdata.js"></script>
@@ -63,7 +62,8 @@
             altrows: true,
             enabletooltips: true,
             editable: true,
-            selectionmode: 'multiplecellsadvanced',
+            editmode: 'dblclick',
+            selectionmode: 'singlerow',
             columns: [
                 { text: '姓名', datafield: 'empName', width: 250 },
                 { text: '年龄', datafield: 'age', width: 200 },
