--- a/jQWidgets/jqxGrid.html
+++ b/jQWidgets/jqxGrid.html
@@ -3,7 +3,9 @@
 <head>
     <title>jqxGrid</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="resource/styles/jqx.bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="resource/styles/jqx.base.css" type="text/css" />
+    <link rel="stylesheet" href="resource/styles/jqx.bootstrap.css" type="text/css"/>
+    <link rel="stylesheet" href="resource/styles/jqx.metro.css" type="text/css"/>
     <script type="text/javascript" src="resource/scripts/jquery-1.10.2-min.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxcore.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxdata.js"></script>
@@ -56,6 +58,7 @@
         $("#jqxgrid").jqxGrid({
             width: 850,
             source: dataAdapter,
+            theme: 'metro',
             pageable: true,
             autoheight: true,
             sortable: true,
