--- a/jQWidgets/grid.html
+++ b/jQWidgets/grid.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="resource/styles/jqx.bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="resource/styles/jqx.metro.css" type="text/css"/>
     <script type="text/javascript" src="resource/scripts/jquery-1.10.2-min.js"></script>
+    <script type="text/javascript" src="resource/scripts/globalize-zh.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxcore.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxdata.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxbuttons.js"></script>
@@ -58,7 +59,7 @@
         $("#jqxgrid").jqxGrid({
             width: 850,
             source: dataAdapter,
-            theme: 'metro',
+            theme: 'bootstrap',
             pageable: true,
             autoheight: true,
             sortable: true,
