--- a/jQWidgets/tree.html
+++ b/jQWidgets/tree.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="resource/styles/jqx.bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="resource/styles/jqx.metro.css" type="text/css"/>
     <script type="text/javascript" src="resource/scripts/jquery-1.10.2-min.js"></script>
+    <script type="text/javascript" src="resource/scripts/globalize-zh.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxcore.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxdata.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxbuttons.js"></script>
@@ -143,7 +144,11 @@
             source: records,
             width: '300px',
             toggleMode: 'click',
-            theme: 'metro'
+            theme: 'bootstrap',
+            allowDrop: true
         });
+
+        // 使指定的某个节点选中
+        $('#tree').jqxTree('val', 'Caffe Latte');
     });
 </script>
