--- a/jQWidgets/grid.html
+++ b/jQWidgets/grid.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="resource/styles/jqx.bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="resource/styles/jqx.metro.css" type="text/css"/>
     <script type="text/javascript" src="resource/scripts/jquery-1.10.2-min.js"></script>
-    <script type="text/javascript" src="resource/scripts/globalize-zh.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxcore.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxdata.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxbuttons.js"></script>
@@ -23,6 +22,8 @@
     <script type="text/javascript" src="resource/scripts/jqxgrid.sort.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxgrid.pager.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxgrid.grouping.js"></script>
+    <script type="text/javascript" src="resource/scripts/globalize.js"></script>
+    <script type="text/javascript" src="resource/scripts/globalize.culture.zh-CN.js"></script>
 </head>
 <body>
 <div id="jqxgrid"></div>
