--- a/jQWidgets/index.html
+++ b/jQWidgets/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>主框架</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="resource/styles/jqx.base.css" type="text/css" />
     <link rel="stylesheet" href="resource/styles/jqx.bootstrap.css" type="text/css" />
     <script type="text/javascript" src="resource/scripts/jquery-1.10.2-min.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxcore.js"></script>
@@ -13,6 +14,8 @@
     <script type="text/javascript" src="resource/scripts/jqxtree.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxexpander.js"></script>
     <script type="text/javascript" src="resource/scripts/jqxsplitter.js"></script>
+    <script type="text/javascript" src="resource/scripts/globalize.js"></script>
+    <script type="text/javascript" src="resource/scripts/globalize.culture.zh-CN.js"></script>
 </head>
 <body class="default">
 <div id="splitter">
