--- a/jQuery EasyUI/Tree.html
+++ b/jQuery EasyUI/Tree.html
@@ -29,6 +29,7 @@
             {"id": "10", "fid": "5", "text": "test", "nodeUrl": ""}
         ];
         treeDate = makeEasyTree(treeDate);
+        alert(JSON.stringify(treeDate));
         $('#tree').tree({
             data: treeDate
         });
