--- a/jQuery EasyUI/Layout.html
+++ b/jQuery EasyUI/Layout.html
@@ -8,32 +8,19 @@
     <script src="resource/jquery.min.js" type="text/javascript"></script>
     <script src="resource/jquery.easyui.min.js" type="text/javascript"></script>
     <script src="resource/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
+    <style>
+        #north div{
+
+        }
+    </style>
 </head>
 <body style="margin: 0">
     <div id="cc" class="easyui-layout" style="width:100%;height:770px;">
-        <div data-options="region:'north'" style="height:50px"></div>
+        <div data-options="region:'north'" style="height:50px;" id="north"></div>
         <div data-options="region:'east',split:true" title="East" style="width:100px;"></div>
         <div data-options="region:'west',split:true" title="West" style="width:220px;"></div>
-        <div data-options="region:'center',split:true">
-            <div id="tt" class="easyui-tabs" style="width:100%;height:100%">
-                <div title="About" style="padding:10px">
-                    <p style="font-size:14px">jQuery EasyUI framework helps you build your web pages easily.</p>
-                    <ul>
-                        <li>easyui is a collection of user-interface plugin based on jQuery.</li>
-                        <li>easyui provides essential functionality for building modem, interactive, javascript applications.</li>
-                        <li>using easyui you don't need to write many javascript code, you usually defines user-interface by writing some HTML markup.</li>
-                        <li>complete framework for HTML5 web page.</li>
-                        <li>easyui save your time and scales while developing your products.</li>
-                        <li>easyui is very easy but powerful.</li>
-                    </ul>
-                </div>
-                <div title="My Documents" style="padding:10px">
-                    <ul class="easyui-tree" data-options="url:'tree_data1.json',method:'get',animate:true"></ul>
-                </div>
-                <div title="Help" data-options="iconCls:'icon-help',closable:true" style="padding:10px">
-                    This is the help content.
-                </div>
-            </div>
+        <div data-options="region:'center',split:true" style="padding-top: 8px">
+            这里展示区...
         </div>
     </div>
 </body>
