--- a/Ace Admin/jqGrid.html
+++ b/Ace Admin/jqGrid.html
@@ -193,7 +193,7 @@
             data: grid_data,
             datatype: "local",
             height: 250,
-            colNames:[' ', '标识','Last Sales','Name', 'Stock', 'Ship via','Notes'],
+            colNames:[' ', '标识','销售时间','名称', '是否...', '配送方式','备注'],
             colModel:[
                 {name:'myac',index:'', width:80, fixed:true, sortable:false, resize:false,
                     formatter:'actions',
