jquery图片放大和旋转

--- a/ExtJS/index.html
+++ b/ExtJS/index.html
@@ -14,69 +14,30 @@
 <script type="text/javascript">
     Ext.onReady(mainFrame);
 
-    var header = Ext.create('Ext.panel.Panel', {
-        height: 80,
-        html: 'Ext学习示例',
-        region: 'north',
-        split: true,
-        bbar: [{
-            iconCls: 'icon-user',
-            text: '管理员',
-            style: 'margin-left:10px'
-        }, '-', {
-            text: Ext.Date.format(new Date(), 'Y年m月d日 H:i:s')
-        }, '->', {
-            iconCls: 'icon-logout',
-            text: '退出'
-        }],
-        bodyStyle: 'background-color:#99bbe8;line-height:50px;text-align:center;font-size:24px;color:#000000;font-family:黑体;font-weight:bolder'
-    });
-
-    var menuTree = Ext.create('Ext.panel.Panel', {
-        region: 'west',
-        title: 'Accordion布局动态菜单',
-        width: 250,
-        iconCls: 'icon-accordion',
-        autoScroll: false,
-        layout: 'accordion',
-        collapsible: true,
-        layoutConfig: {
-            animate: true
-        },
-        split: true
-    });
-
-    var tabPanel = Ext.create('Ext.tab.Panel', {
-        activeTab: 0,
-        enableTabScroll: true,
-        animScroll: true,
-        border: true,
-        autoScroll: true,
-        region: 'center',
-        split: true,
-        items: [{
-            iconCls: 'icon-activity',
-            title: '平台首页',
-            //xtype:'first',
-            layout: 'column',
-            loader: {
-                url: 'test.html',
-                autoLoad: true
-            }
-        }]
-    });
-
-    var bottom = Ext.create('Ext.panel.Panel', {
-        height: 20,
-        html: Ext.Date.format(new Date(), 'Y-m-d H:i:s'),
-        region: 'south',
-        bodyStyle: 'background-color:#99bbe8;line-height:20px;text-align:center;font-size:14px;color:#000000;font-famiy:宋体;font-weight:sharp'
-    });
-
     function mainFrame() {
-        Ext.create('Ext.container.Viewport', {
-            layout: 'border',
-            items: [header, menuTree, tabPanel, bottom]
+        new Ext.Viewport({
+            enableTabScroll: true,
+            layout: "border",
+            items: [{
+                title: "面板",
+                region: "north",
+                height: 50,
+                html: "<h1>网站后台管理系统!</h1>"
+            }, {
+                title:"菜单",
+                region:"west",
+                width:200,
+                collapsible:true,
+                html:"菜单栏"
+            }, {
+                xtype: "tabpanel",
+                region: "center",
+                items: [{
+                    title: "面板一"
+                }, {
+                    title: "面板二"
+                }]
+            }]
         });
     }
 
