jquery图片放大和旋转

--- a/JqueryArtZoom/index.html
+++ b/JqueryArtZoom/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>图片放大和旋转</title>
-    <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
+    <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script src="js/jquery.artZoom.js" type="text/javascript"></script>
     <link href="css/jquery.artZoom.css" rel="stylesheet" type="text/css">
 </head>
@@ -19,7 +19,7 @@
 <script type="text/javascript">
     jQuery(function ($) {
         $('.artZoom').artZoom({
-//            path: './images',	// 设置artZoom图片文件夹路径
+            path: './images',	// 设置artZoom图片文件夹路径
             preload: true,		// 设置是否提前缓存视野内的大图片
             blur: true,			// 设置加载大图是否有模糊变清晰的效果
 
