--- a/jQuery EasyUI/Tab.html
+++ b/jQuery EasyUI/Tab.html
@@ -10,6 +10,8 @@
     <script src="resource/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
 </head>
 <body>
+<a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-add'" onclick="addTabPage_a()">加载a页面</a>
+<a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-add'" onclick="addTabPage_b()">加载b页面</a>
 <div id="tab" class="easyui-tabs" style="width: 260px;height: 600px">
     <div title="系统设置">
         系统设置
@@ -29,6 +31,37 @@
     function initTabs() {
         $('#tab').tabs({
             tabPosition: 'left'
+        });
+    }
+
+    function addTabPage_a() {
+        $('#tab').tabs("add", {
+            title: 'new tab',
+            href: 'a.html',
+            index: "a"
+        });
+    }
+
+    function addTabPage_b() {
+        var currTab = $("#tab");
+        currTab.tabs("add", {
+            title: 'new tab',
+            href: 'b.html',
+            closable: true,
+            index: "a",
+            tools: [{
+                iconCls: "icon-mini-refresh",
+                handler: function() {
+                    var seleTab = currTab.tabs("getSelected");
+                    currTab.tabs("update", {
+                        tab: seleTab,
+                        options: {
+                            title: "新的标题...",
+                            href: "b.html"
+                        }
+                    });
+                }
+            }]
         });
     }
 
