--- a/jQuery EasyUI(1.4.3)/Layout.html
+++ b/jQuery EasyUI(1.4.3)/Layout.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body class="easyui-layout">
-    <div data-options="region:'north',split:true" style="height:100px;">XXX企业信息</div>
+    <div data-options="region:'north',split:true" style="height:100px;">XXX后台管理</div>
     <div data-options="region:'west',title:'导航菜单',iconCls:'icon-hamburg-cv',split:true" style="width:210px;"></div>
     <div data-options="region:'center',fit:true" style="padding:0;">显示区域</div>
 </body>
