--- a/jQuery EasyUI(1.4.3)/Layout.html
+++ b/jQuery EasyUI(1.4.3)/Layout.html
@@ -8,17 +8,18 @@
     <link href="resource/ext-themes/default/ext-easyui.css" rel="stylesheet" type="text/css">
     <link href="resource/ext-themes/ext-icon.css" rel="stylesheet" type="text/css">
     <link href="resource/icons/icon-all.min.css" rel="stylesheet" type="text/css">
+    <link href="resource/ehome/ehome.css" rel="stylesheet" type="text/css">
     <script src="resource/jquery.min.js" type="text/javascript"></script>
     <script src="resource/jquery.easyui.min.js" type="text/javascript"></script>
-    <script src="resource/icons/jeasyui.icons.all.js" type="text/javascript"></script>
     <script src="resource/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
+    <script src="resource/ehome/ehome.js" type="text/javascript"></script>
     <style type="text/css">
         body{margin:0;padding:0}
     </style>
 </head>
 <body class="easyui-layout">
     <div data-options="region:'north',split:true" style="height:100px;">XXX后台管理</div>
-    <div data-options="region:'west',title:'导航菜单',iconCls:'icon-hamburg-cv',split:true" style="width:210px;"></div>
+    <div data-options="region:'west',title:'导航菜单',iconCls:'icon-standard-cancel',split:true" style="width:210px;"></div>
     <div data-options="region:'center',fit:true" style="padding:0;">显示区域</div>
 </body>
 </html>
