--- a/jQuery EasyUI(1.4.3)/Tree.html
+++ b/jQuery EasyUI(1.4.3)/Tree.html
@@ -32,7 +32,7 @@
         ];
         treeDate = makeEasyTree(treeDate);
         alert(JSON.stringify(treeDate));
-        $('#tree').tree({
+        $("#tree").tree({
             data: treeDate
         });
     }
